--- a/REUSE.toml
+++ b/REUSE.toml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2025 diggsweden/wallet-account
+# SPDX-FileCopyrightText: 2025 Digg - Agency for Digital Government
 #
 # SPDX-License-Identifier: CC0-1.0
 
@@ -17,7 +17,7 @@ path = [
   ".gitleaks-test/tests/suite-report-approved.jsonl",
 ]
 precedence = "aggregate"
-SPDX-FileCopyrightText = "2025 diggsweden/wallet-account"
+SPDX-FileCopyrightText = "2025 Digg - Agency for Digital Government"
 SPDX-License-Identifier = "CC0-1.0"
 
 [[annotations]]
