--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@ SPDX-License-Identifier: EUPL-1.2
     <relativePath />
   </parent>
   <groupId>se.digg</groupId>
-  <artifactId>wallet-provider</artifactId>
+  <artifactId>wallet-account</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>wallet-provider</name>
-  <description>Backend service for Waller Provider</description>
+  <name>wallet-account</name>
+  <description>Backend service for Wallet Account</description>
   <url />
   <licenses>
     <license />
@@ -53,12 +53,25 @@ SPDX-License-Identifier: EUPL-1.2
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>2.8.9</version>
+    </dependency>
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>io.soabase.record-builder</groupId>
@@ -85,6 +98,21 @@ SPDX-License-Identifier: EUPL-1.2
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-testcontainers</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
