--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@ SPDX-License-Identifier: EUPL-1.2
       <version>2.8.9</version>
     </dependency>
     <dependency>
+      <groupId>com.nimbusds</groupId>
+      <artifactId>nimbus-jose-jwt</artifactId>
+      <version>10.5</version>
+    </dependency>
+    <dependency>
       <groupId>org.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
     </dependency>
