--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,20 @@ server:
 spring:
   application:
     name: wallet-account
-  profiles:
-    active: dev
-  docker:
-    compose:
-      enabled: false
+  jpa:
+    database: POSTGRESQL
+    hibernate:
+      ddl-auto: none
+  datasource:
+    driverClassName: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/
+    username: wallet
+    password: test
+  liquibase:
+    change-log: classpath:db/changelog/changelog.yml
+  sql:
+    init:
+      platform: postgres
 
 # Management and Monitoring
 management:
