feat: refactor dto class and db-mappings
Signed-off-by: Tomas Robertsson <extern.tomas.robertsson@digg.se>

--- a/src/main/resources/db/changelog/changelog.yml
+++ b/src/main/resources/db/changelog/changelog.yml
@@ -29,10 +29,10 @@ databaseChangeLog:
                   name: telephone_number
                   type: VARCHAR(20)
               - column:
-                  name: jwk_key_id
+                  name: public_key_id
                   type: UUID
         - createTable:
-            tableName: jwk
+            tableName: public_key
             columns:
               - column:
                   name: id
